<resources>
    <string name="app_name">NoteLite</string>

    <string name="note_title_hint">Enter a title for the note.</string>
    <string name="note_title_label">Title</string>
    <string name="note_details_lable">Details</string>
    <string name="note_solved_lable">Solved</string>
    <string name="date_picker_title">Date of note:</string>
    <string name="new_note">New Note</string>
    <string name="note_report_text">SEND NOTE REPOTRT</string>
    <string name="note_report">%1$s! The note was noted on %2$s. %3$s, and %4$s</string>
    <string name="note_report_solved">The case is solved</string>
    <string name="note_report_unsolved">The case is not solved</string>
    <string name="note_report_no_suspect">there is no suspect.</string>
    <string name="note_report_suspect">the suspect is %s.</string>
    <string name="note_report_subject">NoteLite Note Report</string>
    <string name="send_report">Send note report via</string>
    <string name="change_style">Change Style</string>
    <string name="delete_note">Delete Note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_user_name">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_keep_password">保存密码</string>
    <string name="text_login">登录</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl">女</string>
    <string name="text_password_again">确认密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_register_remind">邮箱需要确认，否则无法登陆</string>
    <string name="text_no_empty">必需信息，不能为空</string>
    <string name="text_edit_password">重置密码</string>
    <string name="text_now_password">当前密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_find_password">找回密码</string>
    <string name="text_profile_edit">编辑资料</string>
    <string name="text_profile_name">姓名：</string>
    <string name="text_profile_sex">性别：</string>
    <string name="text_profile_age">年龄：</string>
    <string name="text_profile_desc">简介：</string>
    <string name="text_profile_exit">退出登录</string>
    <string name="text_password_serve">密码服务</string>
    <string name="hint_input_title">输入标题</string>
    <string name="hint_input_content">输入内容</string>
    <string name="note_content">笔记内容</string>
    <string name="share_note">Share Note</string>
    <string name="trash">回收箱</string>
</resources>
