<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp"/>

            </LinearLayout>

            <!--用户名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_name"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

            </LinearLayout>

            <!--性别-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_sex"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_profile_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="男/女"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

            </LinearLayout>

            <!--年龄-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_age"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_profile_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

            </LinearLayout>

            <!--简介-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_desc"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_profile_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_password_serve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/text_password_serve"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_profile_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/text_profile_exit"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
